# docpilot

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEMO_SCRIPT.md  Dockerfile  README.md  action.yml  pyproject.toml  render.yaml  requirements.txt
.claude/: launch.json
.github/workflows/: docpilot.yml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/api/: client.js
dashboard/src/components/: DiffViewer.jsx  HealthOrb.jsx  Logo.jsx  Sidebar.jsx  ui.jsx
dashboard/src/hooks/: useToast.jsx
dashboard/src/lib/: format.js
dashboard/src/pages/: Configuration.jsx  LiveConsole.jsx  Overview.jsx  PRActivity.jsx  RepositoryMap.jsx  StalenessReport.jsx
deploy/: Dockerfile
docpilot/: __init__.py  cli.py  demos.py
docpilot/action/: __init__.py  entrypoint.py
docpilot/benchmark/: RESULTS.md  __init__.py  __main__.py  cases.py  runner.py
docpilot/core/: __init__.py  applier.py  config.py  diff_analyzer.py  embeddings.py  github_integration.py  linker.py  llm.py  models.py  parser.py  pipeline.py  prompt_loader.py  repair_engine.py  report_format.py  staleness_checker.py
docpilot/prompts/: repair.md  staleness_check.md  validate.md
docpilot/server/: __init__.py  __main__.py  app.py  store.py
tests/: conftest.py  test_action_entrypoint.py  test_applier.py  test_auditor.py  test_benchmark.py  test_diff_analyzer.py  test_integration.py  test_linker.py  test_parser.py  test_repair_engine.py  test_report_format.py  test_staleness_checker.py
