[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docpilot"
version = "1.0.0"
description = "Self-healing technical documentation engine packaged as a GitHub Action."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DocPilot" }]
keywords = ["documentation", "rag", "llm", "github-action", "ci", "embeddings"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Documentation",
]
# The core engine has no required runtime dependencies; optional providers below.
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.40.0"]
anthropic = ["anthropic>=0.34.0"]
chroma = ["chromadb>=0.5.0"]
github = ["PyGithub>=2.3.0"]
server = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0"]
all = ["openai>=1.40.0", "anthropic>=0.34.0", "chromadb>=0.5.0", "PyGithub>=2.3.0", "fastapi>=0.110.0", "uvicorn[standard]>=0.29.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
docpilot = "docpilot.cli:main"

[tool.setuptools.packages.find]
include = ["docpilot*"]

[tool.setuptools.package-data]
docpilot = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
